--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>BUBBLE HUNT FRENZY</h1>
         <div id="container">
             <div id="top">
-                <div class="elem">
+                <div class="elem" id="highscore">
                     <h3>HIGH SCORE</h3>
                     <div class="ebox" id="hscore">0</div>
                 </div>
